--- a/user-verification.css
+++ b/user-verification.css
@@ -7,6 +7,7 @@ body{
 table{
     margin:0;
     width:100%;
+    border-collapse: collapse;
 }
 .table-head{
     font-style:Bold;
@@ -14,6 +15,8 @@ table{
     color:#666666;
     padding: 0;
     margin:0;
+    border: 0.1rem black solid;
+    height: 3.5rem;
 }
 .details{
     font-style:Bold;
@@ -38,6 +41,8 @@ margin-right: auto;
     background-color: #D9D9D9;
     text-align: center;
     border-radius: 10px;
+    border: 0.1rem black solid;
+    height: 2.2rem;
 }
 #filter
 {
@@ -53,6 +58,9 @@ margin-right: auto;
     font-size: 30;
     background-color: #D9D9D9;
     border-radius: 10px;
+    border: 0.1rem black solid;
+    height: 2.2rem;
+    height: 3rem;
 }
 .table-data1{
     align-content: center center;
@@ -62,6 +70,8 @@ margin-right: auto;
     font-size: 30;
     background-color: #D9D9D9;
     border-radius: 10px;
+    height: 2.2rem;
+    border: 0.1rem black solid;
 }
 .table-data1 :hover{
 color: rgb(100, 144, 159);
@@ -73,8 +83,10 @@ background-color: rgba(68, 101, 38, 0);
     padding:0;
     font-size: 30;
     background-color: #92E0EB;
-    border-radius: 1px;
+    border-radius: 10px;
     border-color: whitesmoke;
+    width: 10rem;
+    height: 2rem;
 }
 .not-approv{
     position: center center;
@@ -84,6 +96,8 @@ background-color: rgba(68, 101, 38, 0);
    /* margin:1000px;*/
     font-size: 30;
     background-color: #98A6F6;
+    width: 10rem;
+    height: 2rem;
     border-radius: 10px;
 }
 .page
