--- a/Registration_form.css
+++ b/Registration_form.css
@@ -21,12 +21,12 @@ html1{
   margin: 0 0 28px;
 }
 .container{
-    display: flex;
-    flex-direction: column;
-    padding: 7px;
-    margin: 50px;
-    vertical-align: -webkit-baseline-middle;
-    /* width: 25vw; */
+  /* display: flex;
+  flex-direction: column; */
+  border: 0.1rem black solid;
+  padding: 2rem 4rem;
+  margin: 50px;
+  border-radius: 1rem;
 }
 h1,h2,h4{
   font-family: 'Noto Serif',serif;
@@ -48,37 +48,48 @@ h4{
   font-size: 17px;
   font-weight: 700;
   color: #676767;
-  margin-inline-start: 80px;
+  /* margin-inline-start: 80px; */
   
 }
-#prefix{
+/* #prefix{
   width: 187px;
   height: 30px;
   border: none;
   border-radius: 5px;
   padding: 5px;
   top: 20px;
-  /* display: flex; */
-  background: #ebe7e7;
-  /* position: relative; */
   margin: 0 30px 0 80px;
-    
-}
-input {
-    margin: 20px;
-    outline: none;
-    padding: 10px;
-    border: none;
-    background-color: rgb(225, 225, 225);
-    border-radius: 5px;
-    color: black;
-   /* align-items: center;*/
-    line-height: 5px;
-    margin-inline-start: 80px;
-    margin-inline-end: 30px;
-    max-block-size: 50px;
-    text-size-adjust: 12px;
+  background: #ebe7e7;
+  /* display: flex; */
+  /* position: relative; 
+} */
+input,select {
+  margin: 20px;
+  width: 250px;
+  outline: none;
+  padding: 10px;
+  border: none;
+  background-color: rgb(225, 225, 225);
+  border-radius: 10px;
+  color: black;
+  /* align-items: center; */
+  /* line-height: 5px; */
+  /* margin-inline-start: 80px; */
+  /* margin-inline-end: 30px; */
+  /* max-block-size: 50px; */
+  text-size-adjust: 12px;
 
+  }
+  .boxes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .boxes_1{
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+    flex-wrap: wrap;
   }
   button {
     display: flex;
@@ -93,6 +104,7 @@ input {
     background-color: #8CC8FF;
     color: white;
     border-radius: 15px;
+    margin: 1rem
     /* margin-inline-start: 550px; */
     
   }
@@ -104,6 +116,10 @@ input {
   .imagetext{
     flex-direction: row;
     bottom: 0;
+  }
+  .checkbox{
+    width: 16px;
+    margin: 0;
   }
 .upload_area label{
   cursor: pointer;
@@ -144,12 +160,25 @@ input {
   margin: 20px 0;
 }
 .box{
-  margin: 20px 0;
+  margin: 10px 45px;
 }
 @media(max-width:650px){
   .upload{
     flex-direction: column;
     gap: 45px;
     align-items: center;
+  }
+}
+@media(max-width:800px){
+  .container{
+    padding: 2rem;
+  }
+}
+@media(max-width:428px){
+  .box {
+    margin: 10px;
+  }
+  .container{
+    margin: 30px;
   }
 }
