--- a/Event_Registration.css
+++ b/Event_Registration.css
@@ -154,6 +154,9 @@ button:hover {
   display: flex;
   justify-content: center;
 }
+.Registration_container{
+  border: black;
+}
 .datetime{
   display: flex;
 }
