--- a/Profile.css
+++ b/Profile.css
@@ -33,7 +33,11 @@ nav ul{
     color: black;
     justify-content: space-between;
 }
-    
+.heading{
+    text-align: center;
+    font-weight: 900;
+    font-size: 5rem;
+}
 
 nav ul li a{
     color: #000000;
@@ -62,9 +66,10 @@ nav ul li a{
     align-items: center;
 }
 .user-info img{
-    width: 45px;
+    width: 50px;
     border-radius: 50%;
     margin-right: 3px;
+    height: 50px;;
 }
 .sub-menu hr{
     border: 0;
